[package]
name = "flo"
version = "0.1.0"
authors = ["pfried <philipsfried@gmail.com>"]

[dependencies]
rotor-http = "*"
rotor = "*"
netbuf = "*"
serde_json = "*"
queryst = "1.0"
lru_time_cache = "0.3"
log = "0.3"
log4rs = "0.4"
url = "1.1"
clap = "2.5"

[dev-dependencies]

httparse = "*"
tempdir = "*"
env_logger = "*"
