[package]
name = "flo"
version = "0.1.0"
authors = ["pfried <philipsfried@gmail.com>"]

[dependencies]
queryst = "1.0"
lru_time_cache = "0.3"
log = "0.3"
log4rs = "0.4"
url = "1.1"
clap = "2.5"
nom = "1.2"
byteorder = "0.5"
flo-crdt = { path = "./flo-crdt" }

[dev-dependencies]
tempdir = "*"
env_logger = "*"
