[package]
name = "flo"
version = "0.1.0"
authors = ["pfried <philipsfried@gmail.com>"]

[dependencies]
lru_time_cache = "0.3"
log = "0.3"
log4rs = "0.4"
url = "1.1"
clap = "2.5"
nom = "2.0"
byteorder = "0.5"
flo-event = { path = "./flo-event" }
tokio-core = "0.1.1"
futures = "0.1.4"
glob = "0.2"
chrono = "^0.2"

[dev-dependencies]
tempdir = "*"
env_logger = "*"
