[package]
name = "flo-client-lib"
version = "0.1.0"
authors = ["pfried <philipsfried@gmail.com>"]

[features]
default = []
serde-client = ["serde"]

[dependencies]
flo-protocol = { path = "../flo-protocol" }
flo-event = { path = "../flo-event" }
log = "0.3"
serde = { version = "^0.8", optional = true }

[dev-dependencies]
env_logger = "*"
