[package]
name = "flo-server"
version = "0.1.0"
authors = ["pfried <philipsfried@gmail.com>"]

[dependencies]
flo-event = { path = "../flo-event" }
flo-protocol = { path = "../flo-protocol" }
num_cpus = "^1.2"
log = "0.3"
log4rs = "0.4"
clap = "2.5"
nom = "2.0"
byteorder = "1"
tokio-core = "0.1.4"
futures = "0.1.10"
glob = "0.2"
chrono = "^0.2"
memmap = "0.5.2"

[dev-dependencies]
flo-client-lib = { path = "../flo-client-lib" }
env_logger = "*"
tempdir = "*"
url = "1.1"

[[bin]]
name = "flo"
path = "src/main.rs"

