[package]
name = "flo-server"
version = "0.2.0"
authors = ["pfried <philipsfried@gmail.com>"]

[dependencies]
flo-event = { path = "../flo-event" }
flo-protocol = { path = "../flo-protocol" }
flo-client-lib = { path = "../flo-client-lib" }
num_cpus = "^1.2"
log = "0.3"
log4rs = "0.4"
clap = "2.5"
nom = "2.0"
byteorder = "1"
tokio-core = "0.1.10"
futures = "0.1.16"
glob = "0.2"
chrono = "^0.2"
memmap = "0.5.2"
libc = "0.2.33"
serde = "0.9.15"
serde_json = "0.9.10"

[dev-dependencies]
env_logger = "*"
tempdir = "*"
url = "1.1"

[lib]
name = "flo_server"
path = "src/lib.rs"

[[bin]]
name = "flo"
path = "src/main.rs"

