[package]
name = "flo-server"
version = "0.2.0"
authors = ["pfried <philipsfried@gmail.com>"]

[dependencies]
flo-event = { path = "../flo-event" }
flo-protocol = { path = "../flo-protocol" }
flo-client-lib = { path = "../flo-client-lib" }
num_cpus = "^1.2"
log = "0.4"
log4rs = "0.8"
clap = "2.5"
nom = "2.0"
byteorder = "1"
tokio-core = "0.1.10"
futures = "0.1.16"
glob = "0.2"
chrono = "^0.2"
memmap = "0.5.2"
libc = "0.2.33"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.4"
rmp = "^0.8"
rmp-serde = "^0.13"

[dev-dependencies]
env_logger = "*"
tempdir = "*"
url = "1.1"

[lib]
name = "flo_server"
path = "src/lib.rs"

[[bin]]
name = "flo"
path = "src/main.rs"

